--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -9,20 +9,19 @@
             android:text="@string/dateLanding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-            android:layout_marginTop="@dimen/fragment_horizontal_margin"
+            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+            android:layout_marginTop="@dimen/fragment_travel_margin_top"
             android:id="@+id/tvLandingDateLbl" />
 
         <TextView
             tools:text="15, Nov 2016"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_alignTop="@+id/tvLandingDateLbl"
-            android:layout_alignLeft="@+id/tvArrivalTime"
-            android:layout_alignStart="@+id/tvArrivalTime"
-
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/fragment_travel_prep_padding"
+            android:layout_marginEnd="@dimen/fragment_travel_prep_padding"
             android:id="@+id/tvLandingDate" />
 
         <TextView
@@ -30,43 +29,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvLandingDateLbl"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-            android:layout_marginTop="25dp"
+            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+            android:layout_marginTop="@dimen/fragment_travel_margin_top"
             android:id="@+id/tvLandingLbl" />
 
         <TextView
             android:text="9:30 AM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
             android:layout_alignBottom="@+id/tvLandingLbl"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="25dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginRight="@dimen/fragment_travel_prep_padding"
+            android:layout_marginEnd="@dimen/fragment_travel_prep_padding"
             android:id="@+id/tvArrivalTime" />
 
         <TextView
             android:text="@string/carouselLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_below="@+id/tvLandingLbl"
             android:layout_alignLeft="@+id/tvLandingLbl"
             android:layout_alignStart="@+id/tvLandingLbl"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/fragment_travel_margin_top"
             android:id="@+id/tvCarouselLbl" />
 
         <TextView
             tools:text="2B"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-
             android:layout_alignBottom="@+id/tvCarouselLbl"
-            android:layout_alignLeft="@+id/tvArrivalTime"
-            android:layout_alignStart="@+id/tvArrivalTime"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/fragment_travel_prep_padding"
+            android:layout_marginEnd="@dimen/fragment_travel_prep_padding"
             android:id="@+id/tvCarousel" />
 
         <TextView
@@ -76,19 +72,19 @@
             android:layout_below="@+id/tvCarouselLbl"
             android:layout_alignLeft="@+id/tvLandingLbl"
             android:layout_alignStart="@+id/tvLandingLbl"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-            android:layout_marginTop="25dp"
-            android:id="@+id/tvArrivalGatelbl" />
+            android:layout_marginTop="@dimen/fragment_travel_margin_top"
+            android:id="@+id/tvArrivalGatelbl"
+            android:layout_marginBottom="@dimen/fragment_travel_prep_padding"/>
 
         <TextView
             tools:text="7B"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/tvArrivalGatelbl"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
             android:layout_alignLeft="@+id/tvCarousel"
             android:layout_alignStart="@+id/tvCarousel"
-            android:id="@+id/tvArrivalGate" />
+            android:id="@+id/tvArrivalGate"
+            android:layout_marginBottom="@dimen/fragment_travel_prep_padding"/>
 
     </RelativeLayout>
 </layout>
