--- a/app/src/main/res/layout/fragment_restricted_items.xml
+++ b/app/src/main/res/layout/fragment_restricted_items.xml
@@ -5,98 +5,124 @@
 
     <TextView
         android:text="@string/restrictedItemsList"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+        android:textAppearance="@style/ExotikosMediumText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-        android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginTop="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/tvRestrictedItemsLbl" />
 
     <CheckedTextView
         android:text="@string/flammable"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-        android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginTop="@dimen/fragment_travel_margin_top"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView1" />
     <TextView
         android:text="@string/flammableDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/flammableDetailslbl" />
 
     <CheckedTextView
         android:text="@string/firearms"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
         android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView2" />
 
     <TextView
         android:text="@string/firearmsDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/firearmsDetailslbl" />
 
     <CheckedTextView
         android:text="@string/selfDefense"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
         android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView3" />
 
     <TextView
         android:text="@string/selfDefenseDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/selfDefenselbl" />
 
     <CheckedTextView
         android:text="@string/sharpObj"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
         android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView4" />
     <TextView
         android:text="@string/sharpObjDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/sharpObjDetailslbl" />
 
 
     <CheckedTextView
         android:text="@string/sportingGoods"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
         android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView5" />
     <TextView
         android:text="@string/sportingGoodsDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/sportingGoodsDetailslbl" />
 
     <CheckedTextView
         android:text="@string/tools"
+        android:checkMark="@drawable/checkbox_marked_circle_outline"
+        android:checkMarkTint="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
         android:layout_marginTop="@dimen/fragment_horizontal_margin"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/checkedTextView6" />
     <TextView
         android:text="@string/toolsDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+        android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
+        android:layout_marginBottom="@dimen/fragment_travel_prep_padding"
+        android:layout_marginRight="@dimen/fragment_horizontal_margin"
         android:id="@+id/toolsDetailslbl" />
 
 </LinearLayout>
