--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -4,7 +4,8 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/rl">
 
         <TextView
             android:text="@string/flightNumberlbl"
@@ -77,6 +78,7 @@
             android:layout_alignLeft="@+id/tvFromLbl"
             android:layout_alignStart="@+id/tvFromLbl"
             android:layout_marginTop="@dimen/fragment_travel_margin_top"
+            android:layout_marginBottom="@dimen/fragment_travel_margin_top"
             android:id="@+id/tvDestinationLbl" />
 
         <TextView
@@ -98,52 +100,36 @@
             android:id="@+id/tvDestination"
             android:layout_alignTop="@+id/tvDestinationLbl" />
 
-        <TextView
-            tools:text="Checkin before 31Days"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvCheckinDaysLeft"
-            android:layout_below="@+id/btnAirportPage"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textAppearance="@style/ExotikosLargeText"
-            android:layout_marginTop="@dimen/fragment_travel_margin_top"
-            android:paddingLeft="@dimen/fragment_horizontal_margin"
-            android:background="@color/primary"/>
-
-        <TextView
-            tools:text="Boarding in 32 Days"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvBoarding"
-            android:layout_below="@+id/tvCheckinDaysLeft"
-            android:textAppearance="@style/ExotikosLargeText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="2dp"
+            android:background="@color/primary_light"
+            android:id="@+id/spacer"
+            android:layout_marginTop="@dimen/fragment_travel_prep_margin_bottom"
+            android:layout_below="@+id/tvDestination"
             android:layout_marginBottom="@dimen/fragment_travel_prep_margin_bottom"
-            android:paddingLeft="@dimen/fragment_horizontal_margin"
-            android:background="@color/primary"/>
+            />
 
         <Button
-            android:background="@drawable/google_maps"
-            android:layout_width="50dp"
+            android:text="Directions to Airport"
+            android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:id="@+id/btnAirportPage"
-            android:gravity="end"
-            android:layout_below="@+id/tvDestination"
-            android:paddingLeft="@dimen/fragment_horizontal_margin"
-            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
-            android:layout_marginTop="@dimen/fragment_travel_prep_padding"/>
+            android:textColor="@color/primary_dark"
+            android:background="@android:color/transparent"
+            android:paddingLeft="@dimen/fragment_travel_prep_padding"
+            android:gravity="center|left"
+            android:layout_below="@+id/spacer" />
 
         <Button
             android:background="@drawable/arrow_right_bold_circle"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/btnNext"
-            android:layout_below="@+id/tvDestination"
-            android:layout_alignLeft="@+id/tvDepartureTime"
-            android:layout_alignStart="@+id/tvDepartureTime"
-            android:layout_marginTop="@dimen/fragment_travel_prep_padding" />
+            android:layout_below="@+id/spacer"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+             />
 
         <TextView
             tools:text="San Francisco"
