--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -15,37 +15,29 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:gravity="fill"
             tools:text="fdgfd gfhgh g g hgjyrhj dgf ff h ghj fhj hkj gh fh gfhdgjhjfhg hgf hgd jhfgj fgjhjdghgdjfgh hjg dgjfjfhjgj h"/>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/primary_light"
             android:id="@+id/spacer"
-            android:layout_marginTop="@dimen/fragment_travel_prep_margin_bottom"
             android:layout_below="@+id/tvCheckinInfo"
-            android:layout_marginBottom="@dimen/fragment_travel_prep_margin_bottom"
-            />
+            style="@style/cardViewSeparator"/>
 
         <Button
-            android:text="@string/check_in_scan"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
             android:id="@+id/btnCheckInScan"
-            android:textColor="@color/primary_dark"
-            android:background="@android:color/transparent"
-            android:gravity="center"
             android:layout_below="@+id/spacer"
-            android:layout_toLeftOf="@+id/btnNext"
-            android:layout_toStartOf="@+id/btnNext" />
+            android:text="@string/check_in_scan"
+            style="@style/cardViewButton"/>
+
+        <View
+            android:id="@+id/spacer2"
+            android:layout_below="@+id/btnCheckInScan"
+            style="@style/cardViewSeparator"/>
 
         <Button
             android:id="@+id/btnNext"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/spacer"
-            android:background="@drawable/arrow_right_bold_circle" />
+            android:layout_below="@id/spacer2"
+            android:text="Read More"
+            style="@style/cardViewButton"/>
     </RelativeLayout>
 </layout>
