--- a/app/src/main/res/layout/fragment_in_plane.xml
+++ b/app/src/main/res/layout/fragment_in_plane.xml
@@ -1,42 +1,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <RelativeLayout
+        android:id="@+id/rvCardContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.exotikosteam.exotikos.fragments.InPlaneFragment"
-        >
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        tools:context="com.exotikosteam.exotikos.fragments.InPlaneFragment">
 
         <TextView
             android:id="@+id/tvInPlane"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textColor="@android:color/black"
-
-            tools:text="bla bla bla"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:gravity="fill"
+            tools:text="bla bla bla" />
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/primary_light"
+            android:id="@+id/spacer"
             android:layout_below="@+id/tvInPlane"
-            android:layout_marginTop="@dimen/fragment_travel_prep_margin_bottom"
-            android:layout_marginBottom="@dimen/fragment_travel_prep_margin_bottom"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-            android:layout_marginRight="@dimen/fragment_horizontal_margin"
-            android:id="@+id/spacer"/>
+            style="@style/cardViewSeparator"/>
 
         <Button
             android:id="@+id/btnNext"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:layout_below="@+id/spacer"
-            android:background="@drawable/arrow_right_bold_circle"
-            android:layout_marginBottom="@dimen/fragment_travel_prep_padding"
-            />
+            android:text="Read More"
+            style="@style/cardViewButton"/>
 
     </RelativeLayout>
 </layout>
