--- a/app/src/main/res/layout/fragment_security_checkin.xml
+++ b/app/src/main/res/layout/fragment_security_checkin.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
+        android:layout_margin="10dp"
         >
 
         <CheckedTextView
@@ -96,24 +97,15 @@
             android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
             android:id="@+id/checkBox4" />
         <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/primary_light"
-            android:layout_marginTop="@dimen/fragment_travel_prep_margin_bottom"
-            android:layout_marginBottom="@dimen/fragment_travel_prep_margin_bottom"
             android:id="@+id/spacer"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-            android:layout_marginRight="@dimen/fragment_horizontal_margin"/>
+            style="@style/cardViewSeparator"/>
 
         <Button
-            android:background="@drawable/arrow_right_bold_circle"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_marginLeft="@dimen/fragment_travel_prep_padding"
-            android:layout_marginBottom="@dimen/fragment_travel_prep_padding"
+            android:id="@+id/btnNext"
             android:layout_below="@+id/spacer"
-            android:id="@+id/btnNext" />
+            android:text="Read more"
+            style="@style/cardViewButton"/>
+
     </LinearLayout>
 
 </layout>
