add the real cardView

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -159,4 +159,10 @@
         <item name="android:layout_marginRight">@dimen/fragment_horizontal_margin</item>
     </style>
 
+    <style name="cardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
 </resources>
