cardView styles improvement

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="fragment_travel_prep_padding">16dp</dimen>
     <dimen name="fragment_travel_margin_top">25dp</dimen>
     <dimen name="new_trip_top_guard">50dp</dimen>
+
+    <dimen name="card_elevation">4dp</dimen>
+    <dimen name="card_corner_radius">3dp</dimen>
 </resources>
