--- a/app/src/main/res/layout/activity_travel_status.xml
+++ b/app/src/main/res/layout/activity_travel_status.xml
@@ -35,54 +35,49 @@
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard1"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard2"
                     android:layout_weight="2"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard3"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard4"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard5"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/flCard6"
                     android:layout_weight="1"
-                    app:cardBackgroundColor="#E6E6E6"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="@dimen/card_corner_radius"
+                    app:cardElevation="@dimen/card_elevation"
                     style="@style/cardView"/>
 
             </LinearLayout>
