--- a/app/src/main/res/layout/activity_travel_status.xml
+++ b/app/src/main/res/layout/activity_travel_status.xml
@@ -88,6 +88,10 @@
         android:id="@+id/nvView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:headerLayout="@layout/nav_header"
         android:layout_gravity="start"
-        app:menu="@menu/drawer_view" />
+        app:menu="@menu/drawer_view"
+        app:itemTextColor="@color/secondary_text"
+        app:itemBackground="@color/secondary_light"
+        android:background="@color/secondary_light"/>
 </android.support.v4.widget.DrawerLayout>
