--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:background="@color/primary_dark"
+    android:layout_height="150dp"
+    android:background="@drawable/plane"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Exotikos"
+        android:text="@string/help_header"
         android:textColor="@color/primary_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         style="@style/ExotikosMediumText"/>
