--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,7 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
+        <item name="android:textColor">@color/secondary_text</item>
         <item name="android:fontFamily">sans-serif-smallcaps</item>
     </style>
 
@@ -71,6 +72,7 @@
         <item name="android:textSize">19sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:typeface">sans</item>
+        <item name="android:textColor">@color/secondary_text</item>
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
